<resources>
    <string name="app_name">DicoStory</string>
    <string name="title_home">Home</string>
    <string name="tag_line">In every story there is meaning, and in every meaning there is courage to share</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="text_signup">dont have an account yet? <b>signup</b></string>
    <string name="type_password">enter password</string>
    <string name="error_password">The password must be more than 8 characters!</string>
    <string name="text_registration">complete your details</string>
    <string name="register">register</string>
    <string name="text_verify_password">verify password</string>
    <string name="text_login">already have an account? <b>login</b></string>
    <string name="name">name</string>
    <string name="registration_successful">registration successful</string>
    <string name="password_mismatch">password mismatch</string>
    <string name="image_story">image story</string>
    <string name="text_name">name</string>
    <string name="text_description">description</string>
    <string name="text_date">date</string>
    <string name="text_share_story">share your stories</string>
    <string name="title_post">Post</string>
    <string name="title_setting">Setting</string>
    <string name="text_logout">logout</string>
    <string name="description">description</string>
    <string name="title_gallery">gallery</string>
    <string name="button_gallery">button gallery</string>
    <string name="button_camera">button camera</string>
    <string name="email_is_invalid">email is invalid</string>
    <string name="error_message">error message</string>
    <string name="appwidget_text">DicoStory Banner</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>
    <string name="image_banner">image banner</string>
    <string name="text_set_language">set the language</string>
    <string name="book_image">book image</string>
    <string name="title_map">map</string>
    <string name="retry">retry</string>
    <string name="text_send_location">send location</string>
</resources>